# whisper

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt  setup.py  whisper.py  whisper.service
lib/: audio_recorder.py  config.py  keyboard_output.py  sound.py  tray.py  vad.py
sfx/: generate_sounds.py
whisper/: __init__.py  cli.py  config.py  keyboard_output.py  perception_client.py  sound.py  voice_keyboard.py
