[project]
authors = [
  {name = "Mike Smullin", email = "mike@smullindesign.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
description = "Real-time audio transcription with speaker identification"
keywords = ["transcription", "audio", "speech-to-text", "speaker-identification"]
license = {file = "LICENSE"}
name = "whisper"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

dependencies = [
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
  "numpy>=1.24.0",
  "sounddevice>=0.4.6",
  "faster-whisper>=0.10.0",
  "pynput>=1.7.6",
  "pystray>=0.19.5",
  "pillow>=10.0.0",
  "pyyaml>=6.0.0",
]

[project.scripts]
whisper = "whisper:main"

[project.urls]
Homepage = "https://github.com/mikesmullin/whisper"
Repository = "https://github.com/mikesmullin/whisper"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[tool.setuptools]
packages = ["lib"]
py-modules = ["whisper"]
